# compare

./: .gitignore
rest/: Dockerfile  api.py  pyproject.toml
rest/business/: __init__.py  players_model.py  stadiums_model.py  stadiums_schema.py  teams_model.py  teams_schema.py
rest/core/: depends.py  manager.py
rest/routes/: players.py  stadiums.py  teams.py
